src/snapshots/blis__compile__tests__test_programs__floats.blis.chunk.snap
---
source: src/compile.rs
description: "let pos_inf =  1.0/0.0;\nlet neg_inf = -1.0/0.0;\nlet nan     =  0.0/0.0;\n\nprintln(pos_inf, pos_inf == pos_inf);\nprintln(neg_inf, neg_inf == neg_inf);\nprintln(nan, nan == nan);\n\nprintln(0.1 + 0.2);\n"
input_file: test_programs/floats.blis
---
DisassembledChunk(
  constants: [
    Float(1.0),
    Float(0.0),
    Float(0.1),
    Float(0.2),
  ],
  globals: [
    "pos_inf",
    "neg_inf",
    "nan",
    "println",
  ],
  code: [
    Constant(0),
    Constant(1),
    Div,
    DefineGlobal(0),
    Constant(0),
    Neg,
    Constant(1),
    Div,
    DefineGlobal(1),
    Constant(1),
    Constant(1),
    Div,
    DefineGlobal(2),
    GetGlobal(3),
    GetGlobal(0),
    GetGlobal(0),
    GetGlobal(0),
    Eq,
    Call(2),
    Pop,
    GetGlobal(3),
    GetGlobal(1),
    GetGlobal(1),
    GetGlobal(1),
    Eq,
    Call(2),
    Pop,
    GetGlobal(3),
    GetGlobal(2),
    GetGlobal(2),
    GetGlobal(2),
    Eq,
    Call(2),
    Pop,
    GetGlobal(3),
    Constant(2),
    Constant(3),
    Add,
    Call(1),
    Pop,
    Nil,
    Return,
  ],
)
