src/snapshots/blis__compile__tests__test_programs__math.blis.chunk.snap
---
source: src/compile.rs
description: "let v = 1 + 2 - (3 * 4 / 5 * 6) + 7;\nprintln(v);\n"
input_file: test_programs/math.blis
---
DisassembledChunk(
  constants: [
    Rational(((1, [
      1,
    ]), (1, [
      1,
    ]))),
    Rational(((1, [
      2,
    ]), (1, [
      1,
    ]))),
    Rational(((1, [
      3,
    ]), (1, [
      1,
    ]))),
    Rational(((1, [
      4,
    ]), (1, [
      1,
    ]))),
    Rational(((1, [
      5,
    ]), (1, [
      1,
    ]))),
    Rational(((1, [
      6,
    ]), (1, [
      1,
    ]))),
    Rational(((1, [
      7,
    ]), (1, [
      1,
    ]))),
  ],
  globals: [
    "v",
    "println",
  ],
  code: [
    Constant(0),
    Constant(1),
    Add,
    Constant(2),
    Constant(3),
    Mul,
    Constant(4),
    Div,
    Constant(5),
    Mul,
    Sub,
    Constant(6),
    Add,
    DefineGlobal(0),
    GetGlobal(1),
    GetGlobal(0),
    Call(1),
    Pop,
    Nil,
    Return,
  ],
)
