src/snapshots/blis__compile__tests__test_programs__one.blis.chunk.snap
---
source: src/compile.rs
description: "1;\n"
input_file: test_programs/one.blis
---
DisassembledChunk(
  constants: [
    Rational(((1, [
      1,
    ]), (1, [
      1,
    ]))),
  ],
  globals: [],
  code: [
    Constant(0),
    Pop,
    Nil,
    Return,
  ],
)
