src/snapshots/blis__compile__tests__test_programs__strings.blis.chunk.snap
---
source: src/compile.rs
description: "let a = \"a\";\nlet b = \"b\";\nlet c = \"c\";\n\nlet x = a;\nprintln(x);\n\nx = a + a;\nprintln(x);\n\nx = x + b;\nprintln(x);\n\nx = x + x;\nprintln(x);\n\na = x + x;\nprintln(a);\n\na = nil;\nb = nil;\nc = nil;\nx = nil;\n\"\";\n"
input_file: test_programs/strings.blis
---
DisassembledChunk(
  constants: [
    String("a"),
    String("b"),
    String("c"),
    String(""),
  ],
  globals: [
    "a",
    "b",
    "c",
    "x",
    "println",
  ],
  code: [
    Constant(0),
    DefineGlobal(0),
    Constant(1),
    DefineGlobal(1),
    Constant(2),
    DefineGlobal(2),
    GetGlobal(0),
    DefineGlobal(3),
    GetGlobal(4),
    GetGlobal(3),
    Call(1),
    Pop,
    GetGlobal(0),
    GetGlobal(0),
    Add,
    SetGlobal(3),
    GetGlobal(4),
    GetGlobal(3),
    Call(1),
    Pop,
    GetGlobal(3),
    GetGlobal(1),
    Add,
    SetGlobal(3),
    GetGlobal(4),
    GetGlobal(3),
    Call(1),
    Pop,
    GetGlobal(3),
    GetGlobal(3),
    Add,
    SetGlobal(3),
    GetGlobal(4),
    GetGlobal(3),
    Call(1),
    Pop,
    GetGlobal(3),
    GetGlobal(3),
    Add,
    SetGlobal(0),
    GetGlobal(4),
    GetGlobal(0),
    Call(1),
    Pop,
    Nil,
    SetGlobal(0),
    Nil,
    SetGlobal(1),
    Nil,
    SetGlobal(2),
    Nil,
    SetGlobal(3),
    Constant(3),
    Pop,
    Nil,
    Return,
  ],
)
